[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Sagar Chavan <sagar.c.03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
day1_part1 = "advent_of_code_2023.solutions:day1_part1"
day1_part2 = "advent_of_code_2023.solutions:day1_part2"
