[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Sagar Chavan <sagar.c.03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
day1_part1 = "advent_of_code_2023.solutions:day1_part1"
day1_part2 = "advent_of_code_2023.solutions:day1_part2"
day2_part1 = "advent_of_code_2023.solutions:day2_part1"
day2_part2 = "advent_of_code_2023.solutions:day2_part2"
day3_part1 = "advent_of_code_2023.solutions:day3_part1"
day3_part2 = "advent_of_code_2023.solutions:day3_part2"
day4_part1 = "advent_of_code_2023.solutions:day4_part1"
day4_part2 = "advent_of_code_2023.solutions:day4_part2"
day5_part1 = "advent_of_code_2023.solutions:day5_part1"
day5_part2 = "advent_of_code_2023.solutions:day5_part2"
day6_part1 = "advent_of_code_2023.solutions:day6_part1"
day6_part2 = "advent_of_code_2023.solutions:day6_part2"
day7_part1 = "advent_of_code_2023.solutions:day7_part1"
day7_part2 = "advent_of_code_2023.solutions:day7_part2"
day8_part1 = "advent_of_code_2023.solutions:day8_part1"
day8_part2 = "advent_of_code_2023.solutions:day8_part2"
day9_part1 = "advent_of_code_2023.solutions:day9_part1"
day9_part2 = "advent_of_code_2023.solutions:day9_part2"
day10_part1 = "advent_of_code_2023.solutions:day10_part1"
day10_part2 = "advent_of_code_2023.solutions:day10_part2"
day11_part1 = "advent_of_code_2023.solutions:day11_part1"
day11_part2 = "advent_of_code_2023.solutions:day11_part2"
day12_part1 = "advent_of_code_2023.solutions:day12_part1"
day12_part2 = "advent_of_code_2023.solutions:day12_part2"
day13_part1 = "advent_of_code_2023.solutions:day13_part1"
day13_part2 = "advent_of_code_2023.solutions:day13_part2"
day14_part1 = "advent_of_code_2023.solutions:day14_part1"
day14_part2 = "advent_of_code_2023.solutions:day14_part2"
day15_part1 = "advent_of_code_2023.solutions:day15_part1"
day15_part2 = "advent_of_code_2023.solutions:day15_part2"
day16_part1 = "advent_of_code_2023.solutions:day16_part1"
day16_part2 = "advent_of_code_2023.solutions:day16_part2"
day17_part1 = "advent_of_code_2023.solutions:day17_part1"
day17_part2 = "advent_of_code_2023.solutions:day17_part2"
day18_part1 = "advent_of_code_2023.solutions:day18_part1"
day18_part2 = "advent_of_code_2023.solutions:day18_part2"
day19_part1 = "advent_of_code_2023.solutions:day19_part1"
day19_part2 = "advent_of_code_2023.solutions:day19_part2"
day20_part1 = "advent_of_code_2023.solutions:day20_part1"
day20_part2 = "advent_of_code_2023.solutions:day20_part2"
day21_part1 = "advent_of_code_2023.solutions:day21_part1"
day21_part2 = "advent_of_code_2023.solutions:day21_part2"
day22_part1 = "advent_of_code_2023.solutions:day22_part1"
day22_part2 = "advent_of_code_2023.solutions:day22_part2"
day23_part1 = "advent_of_code_2023.solutions:day23_part1"
day23_part2 = "advent_of_code_2023.solutions:day23_part2"
day24_part1 = "advent_of_code_2023.solutions:day24_part1"
day24_part2 = "advent_of_code_2023.solutions:day24_part2"
day25_part1 = "advent_of_code_2023.solutions:day25_part1"
day25_part2 = "advent_of_code_2023.solutions:day25_part2"
